[package]
name = "kirigami"
description = "A Crate to use Kirigami from Rust"
author = ["Ayush Singh <ayushdevel1325@gmail.com>"]
version = "0.1.0"
edition = "2021"
links = "Kirigami2"
license = "MIT"
build = "build.rs"
readme = "README.md"
keywords = ["KDE", "kde", "Kirigami"]
categories = ["api-bindings", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
kde_frameworks = "0.1"
